# bradbot

./: .LICENSE.txt.swp  .flake8  .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
src/: __main__.py  bradbot.py  constants.py
src/exts/: __init__.py  auth.py  extensions.py  ping.py  slash_test.py  source.py  strava.py  strava_data.json  template.py  trail_status.py  weather_command.py
src/util/: constants.py
tests/: test_bradbot.py
